testsuite/gnatprove/tests/U323-018__flow_crash_slices/test.out
p.adb:6:38: error: subtype constraint cannot depend on variable input "V" (SPARK RM 4.4(2))
p.adb:7:30: error: renamed slice cannot depend on variable input "V" (SPARK RM 4.4(2))
p.adb:16:47: error: renamed slice cannot depend on variable input "V" (SPARK RM 4.4(2))
gnatprove: error during flow analysis and proof
